# basic_ros

./: .gitmodules  README.md
.github/workflows/: master.yaml
basic_roscpp/: CMakeLists.txt  package.xml
basic_roscpp/launch/: simple_launch.launch  simple_obj_launch.launch
basic_roscpp/src/: simple_node.cpp  simple_node_pub.cpp  simple_node_pub_obj.cpp  simple_node_sub.cpp  simple_node_sub_obj.cpp
basic_rospy/: CMakeLists.txt  package.xml
basic_rospy/launch/: simple_launch.launch  simple_obj_launch.launch
basic_rospy/src/: simple_node.py  simple_node_pub.py  simple_node_pub_obj.py  simple_node_sub.py  simple_node_sub_obj.py
bumpgo/: CMakeLists.txt  package.xml
bumpgo/src/: bumpstop.py  laser_node.py  robot_forward.py
